--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "botkit": "^0.6.15",
     "botkit-storage-mongo": "^1.0.7",
     "debug": "^3.1.0",
+    "dotenv": "^6.0.0",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
     "mongodb": "^3.1.1"
