Add babel & eslint dependencies

--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   },
   "homepage": "https://github.com/izzydoesit/parkMeBot#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "base64url": "^3.0.0",
     "botkit": "^0.6.15",
     "botkit-storage-mongo": "^1.0.7",
     "debug": "^3.1.0",
     "dotenv": "^6.0.0",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
     "mongodb": "^3.1.1"
