Add dependencies & start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "\"The bot that helps you find a spot!\"",
   "main": "index.js",
   "scripts": {
+    "start": "./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,15 +26,22 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "base64url": "^3.0.0",
+    "body-parser": "^1.18.3",
     "botkit": "^0.6.15",
     "botkit-storage-mongo": "^1.0.7",
+    "config": "^1.30.0",
+    "csv-write-stream": "^2.0.0",
     "debug": "^3.1.0",
     "dotenv": "^6.0.0",
     "eslint": "^5.1.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
+    "express": "^4.16.3",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
-    "mongodb": "^3.1.1"
+    "mkdirp": "^0.5.1",
+    "mongodb": "^3.1.1",
+    "morgan": "^1.9.0",
+    "tracer": "^0.9.1"
   }
 }
