--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "Park Me Bot",
+  "name": "parkmebot",
   "version": "1.0.0",
   "description": "\"The bot that helps you find a spot!\"",
   "main": "index.js",
   "scripts": {
     "start": "./src/index.js",
+    "dev": "NODE_ENV=development babel-node src/index.js",
+    "build": "rm -rf ./dist/ && babel src --out-dir dist/ --copy-files",
+    "prod": "NODE_ENV=production node dist/index.js",
+    "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -42,6 +46,7 @@
     "mkdirp": "^0.5.1",
     "mongodb": "^3.1.1",
     "morgan": "^1.9.0",
+    "request": "^2.87.0",
     "tracer": "^0.9.1"
   }
 }
