--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parkmebot",
   "version": "1.0.0",
   "description": "\"The bot that helps you find a spot!\"",
-  "main": "index.js",
+  "main": ".dist/index.js",
   "scripts": {
     "start": "./src/index.js",
     "dev": "NODE_ENV=development babel-node src/index.js",
