Add mongoose, remove unused dependencies

--- a/package.json
+++ b/package.json
@@ -29,28 +29,24 @@
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "base64url": "^3.0.0",
     "body-parser": "^1.18.3",
     "botkit": "^0.6.15",
     "botkit-storage-mongo": "^1.0.7",
     "config": "^1.30.0",
-    "couchbase": "^2.4.6",
     "csv-write-stream": "^2.0.0",
     "debug": "^3.1.0",
-    "dotenv": "^6.0.0",
     "eslint": "^5.1.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
     "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
-    "graphql": "^0.13.2",
-    "hoek": "^5.0.3",
-    "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
     "mongodb": "^3.1.1",
+    "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
     "request": "^2.87.0",
-    "tracer": "^0.9.1",
-    "uuid": "^3.3.2"
+    "tracer": "^0.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.2"
   }
 }
